# rpud

./: INSTALL  NAMESPACE  NEWS  configure  configure.ac
R/: rpudist.R
man/: rpuDevice.Rd  rpuDist.Rd
src/: Makefile  Makefile.in  rpud.cu  rpud.h  rpudist.cu  rpudist.h
src/inc/: rpubase.h  rputypes.h
